@@ -1,4 +1,6 @@
  2003-08-23 Al Riddoch <alriddoch@zepler.org>
+    - skstream/skstream.cpp: Use getaddrinfo to handle the port number.
+ 2003-08-23 Al Riddoch <alriddoch@zepler.org>
     - skstream/skstream.cpp: Formating changes for clarity.
  2003-08-17 Al Riddoch <alriddoch@zepler.org>
     - Re-order contents of config header so it works on systems
